2005-12-11  Claudio Fontana  <claudio@gnu.org>
	* libidu/scanners.c: Fixed signed/unsigned char* assignments by
	  making both 'scanner_buffer' and 'id' unsigned char*.
	  characters from scanner_buffer are first assigned to an int prior
	  to checking with the class-macros;

	* src/mkid.c, configure.ac, libidu/iduglobal.h:
	  print an off_t value portably by using offtostr (gnulib)

	* intl/*, po/*: updated to latest version
	
2005-12-10  Claudio Fontana  <claudio@gnu.org>
	* applied savannah patch 2775: include scanner for the perl language

2005-11-01  Claudio Fontana  <claudio@gnu.org>
	* libidu/scanners.c: applied (with changes) savannah patch 2702:
	  Fix language options handling bugs, and removed redundant C options
	  help.

2005-05-31  Claudio Fontana  <sick_soul@users.sourceforge.net>
        * configure.in: moved to configure.ac
	* configure.ac (new file): rewritten using gnulib and new macros
	* Makefile.am: all makefiles revisited
	
	* lib/: removed everything and replaced with gnulib imports
	* m4/: removed everything and replaced with gnulib imports

	* i18n support updated to gettext 0.14.1
	* po/fr.po: fixed broken headers. FRENCH TRANSLATOR MARKED UNKNOWN.
	* intl/: updated - Did some nasty things to make libintl work in
	  most circumstances
	* libidu/iduglobal.h (new file): common definitions moved here
	* *.c, *.h: updated to use gnulib functions, removed redundant
	  definitions and checks
	* *.c, *.h: reverted __P() macro introduction, and assume prototypes.
	  Times are mature for that, and I follow gnulib in this.

2000-06-06  Jim Meyering  <meyering@lucent.com>

	* po/POTFILES.in: Add libidu/fnprint.c and remove libidu/xnls.h.

	* mkinstalldirs: Update.
	* missing: Update.

	* depcomp: New file.
	* lib/malloc.c: New file.
	* lib/realloc.c: New file.

	* configure.in: Require 2.14a.
	Check for declaration of strsep.
	* libidu/idfile.c: Declare strsep if necessary.
	* libidu/scanners.c: Likewise.
	* libidu/walker.c: Likewise.
